# Fraudpheus

./: .dockerignore  .gitignore  Dockerfile  MIGRATION.md  README.md  docker-compose.yaml  example.env  macros.toml  manifest.yaml  pyproject.toml  requirements.txt  tags.toml
src/: __init__.py  __main__.py  api.py  config.py  helpers.py  thread_manager.py  webhooks.py
src/services/: backup.py  daily_reminders.py  hackatime.py  thread_manager.py  threads.py  trust.py  user_cache.py  webhook_dispatcher.py
src/slack/: helpers.py  macros.py  tags.py
src/slack/handlers/: actions.py  commands.py  events.py
