[project]
name = "fraudpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "pyairtable>=3.3.0",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.55.0",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.41.0",
    "starlette>=0.52.1",
    "uvicorn>=0.42.0",
]
